--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI_CD_Proccess
+name: MyProccess
 
 on:
   push:
@@ -16,11 +16,7 @@ jobs:
       - name: Create build folder
         run: mkdir build
         
-      - name: Build Project With Cmake
-        run: |
-          cd build
-          cmake ..
-          cmake --build .
+      
           
       - name: Show Files
         run: ls - la
