--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Clone Repo
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Create build folder
         run: mkdir build
