--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,13 @@ jobs:
           
       - name: Show Files
         run: ls -a
+        
+  withdocker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone Repo
+        uses: actions/checkout@v3
+
+      - name: Build With Docker
+        run: docker build -t my_docker .
           
