--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,5 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build With Docker
-        run: docker build -t my_docker .
+        run: docker build -t mydocker .
           
