--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,20 +21,23 @@ jobs:
           cd build
           cmake ..
           cmake --build .
+
+      - name: Wrap With Docker
+        run: docker build -t mydocker .
       
           
       - name: Show Files
         run: ls -a
         
-  withdocker:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Repo
-        uses: actions/checkout@v3
+  # withdocker:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Clone Repo
+  #       uses: actions/checkout@v3
 
-      - name: Build With Docker
-        run: docker build -t mydocker .
+  #     - name: Build With Docker
+  #       run: docker build -t mydocker .
 
-      - name: Show Files
-        run: ls -a
+  #     - name: Show Files
+  #       run: ls -a
           
