--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,22 +22,25 @@ jobs:
           cmake ..
           cmake --build .
 
-      - name: Wrap With Docker
-        run: docker build -t mydocker .
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: user/app:latest
       
           
       - name: Show Files
         run: ls -a
         
-  # withdocker:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Clone Repo
-  #       uses: actions/checkout@v3
-
-  #     - name: Build With Docker
-  #       run: docker build -t mydocker .
-
-  #     - name: Show Files
-  #       run: ls -a
+      
           
