--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: string_modifier_docker:latest
+          tags: sergeyzimakov/string_modifier_docker:latest
       
           
       - name: Show Files
